# src/main/resources/webroot/swagger/swagger.yaml
@@ -117,6 +117,18 @@ paths:
         required: true
         schema:
           type: string
+      - name: limit
+        in: query
+        schema:
+          type: integer
+          format: int32
+          default: 20
+      - name: page
+        in: query
+        schema:
+          type: integer
+          format: int32
+          default: 1
       responses:
         "200":
           description: Successfully fetched experiment history
@@ -357,9 +369,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ExperimentHistoryEntry'
-        totalCount:
-          type: integer
-          format: int32
+        pagination:
+          $ref: '#/components/schemas/PaginationMeta'
     SuccessGetExperimentHistoryResponse:
       type: object
       properties:
